# qsopcast

./: AUTHORS  CMakeLists.txt  README
src/: CMakeLists.txt  abstractchannel.cpp  abstractchannel.h  channel_argument.cpp  channel_argument.h  channel_bookmark.cpp  channel_bookmark.h  channel_history.cpp  channel_history.h  channel_pplive.cpp  channel_pplive.h  channel_ppstream.cpp  channel_ppstream.h  channel_sopcast.cpp  channel_sopcast.h  channellistmodel.cpp  channellistmodel.h  channellistview.cpp  channellistview.h  config.cpp  config.h  filterbar.cpp  filterbar.h  main.cpp  menubar.cpp  menubar.h  mystatusbar.cpp  mystatusbar.h  pageplay.cpp  pageplay.h  pagerecord.cpp  pagerecord.h  playfork.cpp  playfork.h  qsopcast.cpp  qsopcast.desktop  qsopcast.h  recorder.cpp  recorder.h  searchedit.cpp  (+6 more)
src/language/: CMakeLists.txt  zh_CN.qm  zh_CN.ts
